Bug 233421 - "Suspend KTorrent" does not suspend DHT activity
Summary: "Suspend KTorrent" does not suspend DHT activity
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-05 21:31 UTC by Modestas Vainius
Modified: 2010-04-09 21:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Modestas Vainius 2010-04-05 21:31:30 UTC
The report below is quoted from
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=536319. I have confirmed it on
4.0beta2. I have also added original reporter of this Debian bug to CC of this
bug.

I assume that "Pause KTorrent" has been renamed to "Suspend KTorrent" in 4.0.

-------------------
Package: ktorrent
Version: 3.3~~svn975833-1
Severity: normal

*** Please type your report below this line ***

Ktorrent still runs DHT tasks while the application is in pause. (When "Pause Ktorrent" is activated)
Comment 1 Joris Guisson 2010-04-06 20:57:12 UTC
There are DHT tasks which are not related to a torrent.

Maybe I should rename Syspend KTorrent to Suspend Torrents, to avoid confusion. The suspend functionality is not supposed to stop DHT maintenance tasks.
Comment 2 Joris Guisson 2010-04-09 21:39:15 UTC
SVN commit 1113054 by guisson:

Suspend KTorrent -> Suspend Torrents to avoid confusion 

BUG: 233421

 M  +1 -0      ChangeLog  
 M  +1 -1      ktorrent/gui.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1113054