Suspend KTorrent -> Suspend Torrents to avoid confusion

BUG: 233421

svn path=/trunk/extragear/network/ktorrent/; revision=1113054